Refactor hawkbit-core
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>